--- a/web-app-vue/src/assets/scss/custom.scss
+++ b/web-app-vue/src/assets/scss/custom.scss
@@ -1,9 +1,9 @@
-input {
-    outline: 0;
-    border-width: 0 0 1px;
-    border-color: lightgrey
-}
+// input {
+//     outline: 0;
+//     border-width: 0 0 1px;
+//     border-color: lightgrey
+// }
 
-input:focus {
-    border-color: gray
-}
+// input:focus {
+//     border-color: gray
+// }
